out/sample/work/bad/bad/jfstmerge/out-000-0.java
class Bad
{
  void foo() {
    for (int i = 0; i < 100; i++) {
      bar(i);
    }
    for (int i = 1; i < 100; i++) {
      System.out.println(i);
    }
    return;
  }

}
